# claculator

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  qml.qrc
src/: calculator.cpp  calculator.h  queue_requests.cpp  queue_requests.h  queue_results.cpp  queue_results.h  settings.cpp  settings.h
ui/: CalcButton.qml
